--- a/bin/build
+++ b/bin/build
@@ -45,7 +45,6 @@ class FrontMatter(BaseModel):
 class Page(BaseModel):
     path: Path
     front_matter: FrontMatter
-    template: str
 
 
 class Link(BaseModel):
@@ -117,7 +116,7 @@ def iter_pages(dirs: Dirs) -> Iterator[Page]:
             exit_validation_error(path.relative_to(dirs.root), e)
 
         # noinspection PyUnboundLocalVariable
-        yield Page(path=path, front_matter=front_matter, template=template)
+        yield Page(path=path, front_matter=front_matter)
 
 
 def load_state(dirs: Dirs) -> State:
@@ -166,7 +165,12 @@ def site() -> None:
         shutil.copytree(dirs.web / directory, dirs.build / directory)
 
     jinja_env = jinja2.Environment(
-        loader=jinja2.FileSystemLoader(dirs.templates),
+        loader=jinja2.ChoiceLoader(
+            [
+                jinja2.FileSystemLoader(dirs.templates),
+                jinja2.FileSystemLoader(dirs.pages),
+            ]
+        ),
         undefined=jinja2.StrictUndefined,
     )
 
@@ -180,8 +184,15 @@ def site() -> None:
 
         url_dir.mkdir(exist_ok=True)
         try:
-            rendered = jinja_env.from_string(page.template).render(
-                events=published_events, active_page=url
+            # Split the front-matter template lines from the final
+            # template so they don't show up in the final result.
+            # This is ugly, but makes error messages better than just
+            # passing in the template without front-matter to Jinja
+            # as a string.
+            _front_matter, rendered = (
+                jinja_env.get_template(page.path.name)
+                .render(events=published_events, active_page=url)
+                .split("===")
             )
         except jinja2.TemplateError as e:
             exit_jinja_error(e)
