Add description for first meetup

--- a/events.yaml
+++ b/events.yaml
@@ -1,7 +1,12 @@
 events:
 - title: A world in transition
   type: meetup
-  description: ""
+  description: |
+    You have heard enough times about data being the new oil, and
+    do not get us started on "the sexiest job of the 21st century". That being
+    said, insights from data are already shaping the world. In this very first
+    Onehot meetup we will explore the role data plays in transitioning towards
+    tomorrow.
   talks:
     - title: ""
       subtitle: ""
