Styling for event list page and event pages

--- a/bin/build
+++ b/bin/build
@@ -80,6 +80,7 @@ class Event(BaseModel):
     talks: List[Talk]
     date: str
     start_time: str
+    end_time: str
     location: Link
     meetup_url: str
     published: bool
