Automatically generate sitemap.xml based on output
This improves our sitemap generation code by dropping the `<lastmod>`
property and automatically generating the sitemap based on what
`index.html` files are present.

Closes #12

--- a/bin/build
+++ b/bin/build
@@ -1,7 +1,6 @@
 #!/usr/bin/env python
 import os
 import shutil
-import subprocess
 import sys
 import traceback
 import xml.etree.ElementTree as ET
@@ -212,44 +211,29 @@ def site() -> None:
             exit_jinja_error(e)
         event_index_file.write_text(rendered)
 
-    print("Done.")
+    generate_sitemap(dirs)
 
 
-@cli.command()
-def sitemap() -> None:
-    """Update sitemap.xml"""
-
-    dirs = Dirs.from_env()
-
-    last_modified = {}
-    for page in iter_pages(dirs):
-        url = page.front_matter.url
-
-        # Fetch last modification date from git. Options:
-        # `-1` - Only display the most recent commit message.
-        # `--pretty=format:%cI` - Show committer date in strict ISO8601.
-        last_modified[url] = subprocess.run(
-            ["git", "log", "-1", "--pretty=format:%cI", page.path],
-            check=True,
-            text=True,
-            capture_output=True,
-        ).stdout.strip()
+def generate_sitemap(dirs: Dirs) -> None:
+    index_files = dirs.build.glob("**/index.html")
 
     # Build the sitemap
     urlset_node = ET.Element("urlset")
     urlset_node.set("xmlns", "http://www.sitemaps.org/schemas/sitemap/0.9")
 
-    for url, timestamp in last_modified.items():
+    for index in index_files:
         url_node = ET.SubElement(urlset_node, "url")
         loc_node = ET.SubElement(url_node, "loc")
+        url = (
+            str(index).removeprefix(str(dirs.build)).removesuffix("index.html")
+        )
         loc_node.text = f"https://onehot.nl{url}"
-        lastmod_node = ET.SubElement(url_node, "lastmod")
-        lastmod_node.text = timestamp
 
     # This method is not picked up by mypy / PyCharm, but it does exist.
     ET.indent(urlset_node)  # type: ignore
-    (dirs.web / "sitemap.xml").write_bytes(
+    (dirs.build / "sitemap.xml").write_bytes(
         ET.tostring(urlset_node, xml_declaration=True, encoding="utf-8")
+        + b"\n"
     )
 
 
