Add feedback form

--- a/config/nginx-extra.conf
+++ b/config/nginx-extra.conf
@@ -12,3 +12,8 @@ location = /events {
 location = /events/ {
   return 302 /;
 }
+
+# Feedback form for the first meetup
+location /feedback {
+  return 302 https://docs.google.com/forms/d/e/1FAIpQLScfDBMAU6-44W4Ci79jXOUWoKI30-i-V0FOjJMu0J-_cwq_1g/viewform;
+}
