--- a/events.yaml
+++ b/events.yaml
@@ -65,8 +65,8 @@ events:
   start_time: 19:30
   end_time: 21:30
   location:
-    text: Online (Discord)
-    url: https://discord.gg/5Y8g3EWBZ2
+    text: Online (Google Meet)
+    url: https://meet.google.com/drs-thfm-rms
   meetup_url: https://www.meetup.com/onehot/events/278214733/
   published: true
 - title: A world in transition
