--- a/bin/build
+++ b/bin/build
@@ -10,6 +10,8 @@ from pathlib import Path
 from typing import Any, Iterator, List, NoReturn
 
 import jinja2
+import markdown
+import markupsafe
 import typer
 from pydantic import BaseModel, ValidationError
 from ruamel.yaml import YAML  # type: ignore
@@ -65,6 +67,14 @@ class Talk(BaseModel):
     speaker: Speaker
     abstract: str
     keywords: str
+
+    @property
+    def abstract_rendered(self) -> markupsafe.Markup:
+        """Render the abstract as Markdown to HTML."""
+        rendered = markdown.markdown(self.abstract)
+
+        # Mark as safe by wrapping in `Markup`, so Jinja doesn't escape it.
+        return markupsafe.Markup(rendered)
 
 
 class EventType(Enum):
