--- a/events.yaml
+++ b/events.yaml
@@ -1,8 +1,25 @@
 events:
-- title: Tooling (Working title)
+- title: A working title for working tools
   type: meetup
-  description: ""
-  blurb: ""
+  description: |
+    A carpenter has a workshop, a cook has a kitchen, and a data scientist has a
+    computer. Regardless of profession and environment, however, you still need
+    the right tools for your practice. In this meetup we will explore some of
+    the tools that make data science possible. <br/><br/>
+
+    After all, we need the right packages and pipelines to get the most out of our
+    data. We will dive into our toolbox and examine some of the equipment at our
+    disposal. <br/><br/>
+
+    During the meetup we will host two practitioners active in this domain. Both
+    speakers will give a 30 minute presentation, with some time for questions
+    afterwards. Between the talks there will be a brief break, and afterwards we
+    will have room for further discussion and socialising.
+  blurb: |
+    A carpenter has a workshop, a cook has a kitchen, and a data scientist has a
+    computer. Regardless of profession and environment, however, you still need
+    the right tools for your practice. In this meetup we will explore some of
+    the tools that make data science possible.
   talks:
     - title: Continuous Machine Learning
       subtitle: ""
@@ -25,7 +42,7 @@ events:
           - text: LinkedIn
             url: https://www.linkedin.com/in/pawe%C5%82-redzy%C5%84ski-913485108/
       abstract: |
-        In the software eineering world, CI/CD practices have proven to be a
+        In the software engineering world, CI/CD practices have proven to be a
         reliable and effective approach to automating recurring tasks, like
         running tests, code analysis checks and even delivering final products to
         production.
@@ -44,7 +61,7 @@ events:
   end_time: 21:30
   location:
     text: Online (Google Meet)
-    url: TODO
+    url: https://meet.google.com/ren-exxt-twn
   meetup_url: TODO
   published: true
 - title: The bird's-eye view
@@ -57,7 +74,7 @@ events:
     explore topics such as urban data science, geographic information systems,
     and spatial analysis. <br/><br/>
 
-    During this meetup we will host two practicioneers active in this domain:
+    During this meetup we will host two practitioners active in this domain:
     one from academics and one from business. Both speakers will give a 30
     minute presentation, with some time for questions afterwards. Between the
     talks there will be a brief break, and afterwards we will have room for
@@ -154,7 +171,7 @@ events:
     Onehot meetup we will explore the role data plays in transitioning towards
     tomorrow. <br/><br/>
 
-    During this meetup we will host two practicioneers active in this domain:
+    During this meetup we will host two practitioners active in this domain:
     one from academics and one from business. Both speakers will give a 30
     minute presentation, with some time for questions afterwards. Between the
     talks there will be a brief break, and afterwards we will have room for
