--- a/bin/build
+++ b/bin/build
@@ -70,10 +70,7 @@ class Talk(BaseModel):
 
     @property
     def abstract_rendered(self) -> markupsafe.Markup:
-        """Render the abstract as Markdown to HTML."""
         rendered = markdown.markdown(self.abstract)
-
-        # Mark as safe by wrapping in `Markup`, so Jinja doesn't escape it.
         return markupsafe.Markup(rendered)
 
 
@@ -108,6 +105,11 @@ class Event(BaseModel):
         return (
             Path("events") / f"{self.date}-{self.title_escaped}" / "index.html"
         )
+
+    @property
+    def description_rendered(self) -> markupsafe.Markup:
+        rendered = markdown.markdown(self.description)
+        return markupsafe.Markup(rendered)
 
 
 class State(BaseModel):
