--- a/events.yaml
+++ b/events.yaml
@@ -5,11 +5,11 @@ events:
     A carpenter has a workshop, a cook has a kitchen, and a data scientist has a
     computer. Regardless of profession and environment, however, you still need
     the right tools for your practice. In this meetup we will explore some of
-    the tools that make data science possible. <br/><br/>
+    the tools that make data science possible.
 
     After all, we need the right packages and pipelines to get the most out of our
     data. We will dive into our toolbox and examine some of the equipment at our
-    disposal. <br/><br/>
+    disposal.
 
     During the meetup we will host two practitioners active in this domain. Both
     speakers will give a 30 minute presentation, with some time for questions
@@ -73,7 +73,7 @@ events:
     through the world, and the way we move through it is influenced by how those
     data are used. In our second Onehot meetup we will take a view from above and
     explore topics such as urban data science, geographic information systems,
-    and spatial analysis. <br/><br/>
+    and spatial analysis.
 
     During this meetup we will host two practitioners active in this domain:
     one from academics and one from business. Both speakers will give a 30
@@ -171,7 +171,7 @@ events:
     do not get us started on "the sexiest job of the 21st century". That being
     said, insights from data are already shaping the world. In this very first
     Onehot meetup we will explore the role data plays in transitioning towards
-    tomorrow. <br/><br/>
+    tomorrow.
 
     During this meetup we will host two practitioners active in this domain:
     one from academics and one from business. Both speakers will give a 30
