Add Meetup event link

--- a/events.yaml
+++ b/events.yaml
@@ -57,7 +57,7 @@ events:
   location:
     text: Online (Google Meet)
     url: https://meet.google.com/ren-exxt-twn
-  meetup_url: TODO
+  meetup_url: https://www.meetup.com/onehot/events/279445929/
   linkedin_url: TODO
   published: true
 - title: The bird's-eye view
