Add LinkedIn URL for the workflow show

--- a/events.yaml
+++ b/events.yaml
@@ -58,7 +58,7 @@ events:
     text: Online (Google Meet)
     url: https://meet.google.com/ren-exxt-twn
   meetup_url: https://www.meetup.com/onehot/events/279445929/
-  linkedin_url: TODO
+  linkedin_url: https://www.linkedin.com/events/meetup-theworkflowshow6820988096889413632/
   published: true
 - title: The bird's-eye view
   type: meetup
