Fix affiliation Kelvin

--- a/events.yaml
+++ b/events.yaml
@@ -158,7 +158,7 @@ events:
       subtitle: ""
       speaker:
         name: Kelvin de Ruiter
-        affiliation: TU Delft
+        affiliation: First Technology
         bio: |
           Kelvin de Ruiter is a specialist in the field of low-code application
           development – specifically using the Mendix platform – at First
