Make capitalisation Linkedin consistent

--- a/events.yaml
+++ b/events.yaml
@@ -244,7 +244,7 @@ events:
           optimisation.
         photo_url: /img/speakers/basdekan.jpg
         external_urls:
-          - text: Linkedin
+          - text: LinkedIn
             url: https://www.linkedin.com/in/bas-de-kan-168aa0112/
       abstract: |
         The world is moving fast towards more sustainable energy, but
